--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.28.0",
+        "@coral-xyz/anchor": "0.30.1",
         "@metaplex-foundation/mpl-token-metadata": "^3.1.0",
         "@metaplex-foundation/umi": "^0.8.9",
         "@metaplex-foundation/umi-bundle-defaults": "^0.8.9",
